<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Patient Connect</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_patient_location">Patient Location</string>

    <!-- Drawer strings -->
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>

    <!-- Splash Screen -->
    <string name="btnEmergency">Emergency SMS</string>

    <!-- login screen -->
    <string name="userLoginScreen">User Login</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="usertype">User Type</string>
    <string name="radioNurse">Nurse</string>
    <string name="radioPatient">Patient</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegister">Register</string>

    <!-- Vital Signs screen -->
    <string name="title_vital_signs">Vital Signs</string>
    <string name="enterVitalSigns">Enter vital signs</string>
    <string name="selectPatient">Select patient</string>
    <string name="addVitalSigns">Add Vital Signs</string>
    <string name="btnCancel">Cancel</string>
    <string name="bloodPressure">Blood Pressure</string>
    <string name="heartRate">Heart Rate</string>
    <string name="bodyTemperature">Body Temperature</string>

    <!-- Get Vital Signs screen -->
    <string name="choosePatient">Choose Patient</string>
    <string name="chooseNurse">Choose Nurse</string>

    <!-- Patient Interface screen -->
    <string name="title_activity_patient_interface">PatientInterface</string>
    <string name="hello_world">Hello world!</string>
    <string name="ppbannertxt">Patient Panel</string>
    <string name="emergencybtx">Emergency Call</string>
    <string name="motivationbtx">Motivational Video</string>
    <string name="symptomsbtx">Check Symptoms</string>
    <string name="logoutbtx">Log-off</string>
    <string name="videotxt">Exercise Video of the Week</string>

    <!-- Admin Panel screen -->
    <string name="title_admin_panel">Admin Panel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_patient_panel">PatientPanel</string>
    <string name="title_activity_emergency_sms">EmergencySMS</string>
    <string name="btnSend">Send Emergency SMS</string>

    <!-- Patient Symptom Panel screen -->
    <string name="firstSymtom">Choose First Symptom</string>
    <string name="secondSymptom">Choose Second Symptom</string>
    <string name="possibleMedicationCondition">Possible Medical Condition</string>
    <string name="checkCondition">Check Condition</string>

    <!-- Send SMS screen -->
    <string name="SMSBanner">Send SMS</string>
    <string name="phonetxt">Phone Number</string>
    <string name="smstxt">Message</string>
    <string name="sendSms">Send Message</string>
    <string name="btnCancelLogout">Cancel and Logout</string>

</resources>
