<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.alexgomes_kevinmunar_dipenshah_sws901termproject.EnterVitalSignsFragment">

    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/bodyTemperature"
        android:hint="@string/bodyTemperature"
        android:layout_above="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="3dp"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="true"
        android:layout_alignWithParentIfMissing="false" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/enterVitalSigns"
            android:id="@+id/txtEnterVitalSigns"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

   <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/heartRate"
       android:hint="@string/heartRate"
       android:layout_above="@+id/textView6"
       android:layout_alignParentLeft="true"
       android:layout_alignParentStart="true"
       android:layout_marginTop="3dp"
       android:layout_alignParentTop="false"
       android:layout_alignParentBottom="false"
       android:layout_alignParentRight="true"
       android:layout_alignWithParentIfMissing="false" />

   <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/bloodPressure"
       android:hint="@string/bloodPressure"
       android:layout_above="@+id/btnAddVitalSigns"
       android:layout_alignParentLeft="true"
       android:layout_alignParentStart="true"
       android:layout_marginTop="3dp"
       android:layout_alignParentTop="false"
       android:layout_alignParentBottom="false"
       android:layout_alignParentRight="true"
       android:layout_alignWithParentIfMissing="false"
       android:layout_marginBottom="40dp" />

   <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addVitalSigns"
            android:id="@+id/btnAddVitalSigns"
       android:textStyle="bold"
       android:textSize="18dp"
       android:layout_toStartOf="@+id/Cancel"
       android:layout_alignParentBottom="true"
       android:layout_toLeftOf="@+id/Cancel"
       android:layout_marginRight="37dp" />

    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCancel"
            android:id="@+id/Cancel"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_marginRight="36dp"
        android:layout_below="@+id/bloodPressure"
        android:layout_alignRight="@+id/bloodPressure"
        android:layout_alignEnd="@+id/bloodPressure" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/bodyTemperature"
        android:id="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/bodyTemperature"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="3dp"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="true"
        android:layout_alignWithParentIfMissing="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/heartRate"
        android:id="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/heartRate"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="3dp"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="true"
        android:layout_alignWithParentIfMissing="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/bloodPressure"
        android:id="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/bloodPressure"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="3dp"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="true"
        android:layout_alignWithParentIfMissing="false" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/patientOrNurseSpinner"
        android:layout_below="@+id/txtEnterVitalSigns"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        style="@style/SpinnerStyle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/selectPatient"
        android:id="@+id/selectpatienttxt"
        android:layout_below="@+id/txtEnterVitalSigns"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp" />

</RelativeLayout>
