<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.alexgomes_kevinmunar_dipenshah_sws901termproject.VitalSigns">

    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/bodyTemperature"
        android:hint="@string/bodyTemperature"
        android:layout_below="@+id/txtEnterVitalSigns"
        android:layout_alignStart="@+id/heartBeat"
        android:layout_marginTop="50dp" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/enterVitalSigns"
            android:id="@+id/txtEnterVitalSigns"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

   <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/heartBeat"
            android:layout_below="@+id/bodyTemperature"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:hint="@string/heartbeat" />

   <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/bloodPressure"
            android:layout_below="@+id/heartBeat"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="72dp"
            android:hint="@string/bloodPressure" />

   <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addVitalSigns"
            android:id="@+id/btnAddVitalSigns"
       android:layout_marginTop="37dp"
       android:textStyle="bold"
       android:textSize="18dp"
       android:layout_below="@+id/bloodPressure"
       android:layout_alignLeft="@+id/txtEnterVitalSigns"
       android:layout_alignStart="@+id/txtEnterVitalSigns" />

    <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCancel"
            android:id="@+id/Cancel"
            android:layout_alignTop="@+id/btnAddVitalSigns"
            android:layout_alignRight="@+id/txtEnterVitalSigns"
            android:layout_alignEnd="@+id/txtEnterVitalSigns"
        android:textStyle="bold"
        android:textSize="18dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/bodyTemperature"
        android:id="@+id/textView4"
        android:layout_below="@+id/txtEnterVitalSigns"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/heartbeat"
        android:id="@+id/textView5"
        android:layout_below="@+id/bodyTemperature"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/bloodPressure"
        android:id="@+id/textView6"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/heartBeat"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
