<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/bloodPressure"
        android:id="@+id/textView8"
        android:layout_toEndOf="@+id/imageView2"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imageView2"
        android:layout_marginLeft="5dp"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/heartRate"
        android:id="@+id/textView9"
        android:layout_below="@+id/textView8"
        android:layout_toRightOf="@+id/imageView2"
        android:layout_toEndOf="@+id/imageView2"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/bodyTemperature"
        android:id="@+id/textView10"
        android:layout_toEndOf="@+id/imageView2"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_toRightOf="@+id/imageView2"
        android:layout_marginLeft="5dp"
        android:textColor="@android:color/black" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/information"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/lblBloodPressure"
        android:layout_toEndOf="@+id/textView10"
        android:text="45"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView10"
        android:layout_marginLeft="31dp"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/lblHeartRate"
        android:layout_toEndOf="@+id/textView10"
        android:text="45"
        android:layout_alignBottom="@+id/textView9"
        android:layout_alignLeft="@+id/lblBloodPressure"
        android:layout_alignStart="@+id/lblBloodPressure"
        android:textColor="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/lblBodyTemperature"
        android:layout_toEndOf="@+id/textView10"
        android:text="45"
        android:layout_alignTop="@+id/textView10"
        android:layout_alignLeft="@+id/lblHeartRate"
        android:layout_alignStart="@+id/lblHeartRate"
        android:textColor="@android:color/black" />

</RelativeLayout>